--- a/src/slider.less
+++ b/src/slider.less
@@ -14,9 +14,7 @@
     height: 100%;
     margin: 0;
     padding: 0;
-    // firefox/chrome has bug on `slider > :target ~ section` selector
-    // if it's `overflow:hidden`
-    overflow: visible !important;
+    overflow: hidden;
     background: #FFF;
     .box-sizing();
     border: 1px solid #CCC;
@@ -30,17 +28,18 @@
         margin: 0;
         padding: 0;
         overflow: hidden;
-        display: none;
+        opacity: 0;
+        .transition(opacity 1s);
     }
     // target style
     > section:target {
-        display: block;
+        opacity: 1;
     }
 }
 
 // default target style
 #slider-default:target ~ section[default]:first-of-type {
-    display: block;
+    opacity: 1;
 }
 
 // slider start
